// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test /user route Get users 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 0,
  "loggedInAt": null,
  "roleId": 0,
  "updatedAt": null,
  "username": "SYSTEM",
}
`;

exports[`Test /user route Get users 2`] = `
Object {
  "createdAt": Any<String>,
  "id": 10,
  "loggedInAt": null,
  "roleId": 200,
  "updatedAt": null,
  "username": "testUser1",
}
`;

exports[`Test /user route Get users 3`] = `
Object {
  "createdAt": Any<String>,
  "id": 11,
  "loggedInAt": null,
  "roleId": 200,
  "updatedAt": null,
  "username": "testUser2",
}
`;
